# rust-render

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  web.config  webpack.config.js
src/: index.html  index.js  lib.rs  setup.rs  state.rs  utils.rs
src/shaders/fragment/: 2dcol.rs  grad2d.rs  mod.rs
src/shaders/vertex/: 2dcol.rs  grad2d.rs  mod.rs
src/sources/: 2dcol.rs  col2d.rs  grad2d.rs  mod.rs
